# score-card

./: .gitignore  blacklist.txt  buildozer.spec  justfile  main.py  pyproject.toml
src/score_card/: app.py  constants.py  custom_widgets.py  database.py  navigation.py  scoring.py  utilities.py
src/score_card/kv/: app_header.kv  board_form.kv  board_list.kv  board_row.kv  contract_picker.kv  custom_widgets.kv  event_form.kv  event_list.kv  lead_picker.kv  not_implemented.kv  partner_form.kv  partner_list.kv  score_picker.kv  section_board_list.kv  section_list.kv  settings_form.kv  splash.kv  theme.kv
src/score_card/models/: board.py  event.py  partner.py  settings.py
src/score_card/repositories/: board.py  event.py  partner.py  settings.py
src/score_card/screens/: base_screen.py  board_form.py  board_list.py  board_row.py  contract_picker.py  event_form.py  event_list.py  lead_picker.py  not_implemented.py  partner_form.py  partner_list.py  score_picker.py  section_board_list.py  section_list.py  settings_form.py  splash.py
src/score_card/services/: board.py  event.py  export.py  partner.py  settings.py
src/score_card/widgets/: app_header.py
